[package]
name = "cqi_rs"
version = "0.1.0"
authors = ["SpitfireX <timm.weber@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
enum-utils = "0.1.1"
num-traits = "0.2"
num-derive = "0.3"
ctrlc = "3.1.5"
rustyline = "6.2.0"
